# music-tag-cli

./: .gitignore  CHANGELOG.md  CHANGELOG.zh-cn.md  CHANGELOG.zh-tw.md  Cargo.toml  INSTALL.md  README.md  README.zh-cn.md  README.zh-tw.md  README_zh-cn.md  README_zh-tw.md  build.rs  rustfmt.toml
examples/: CHANGELOG.md  cli1.rs  cli2.rs  dyn.rs  taglib.rs
examples/files/: .gitignore
src/: args.rs  basic_test.rs  cli.rs  config.rs  main.rs  model.rs  op.rs  where.l  where.y  where_clause.rs
src/op/: audio_tag_impl.rs  clear.rs  conv_en.rs  conv_utf8.rs  conv_zh.rs  exp.rs  imp.rs  lrc.rs  mod.rs  mod_num.rs  mod_text_const.rs  mod_text_regex.rs  ren.rs  set_const.rs  set_name.rs  set_seq.rs  tag_impl.rs  taglib_impl.rs  view.rs
src/op/tag_impl/: audio_tags_impl.rs  mod.rs  taglib_impl.rs
src/util/: json_de.rs  mod.rs  numeric.rs  path.rs  str.rs
