[package]
name = "music-tag-cli"
version = "1.0.2"
authors = ["Sam < shengw1127@gmail.com>"]
edition = "2021"
rust-version = "1.70"
repository = "https://github.com/shenngw1127/music-tag-cli"
homepage = "https://github.com/shenngw1127/music-tag-cli"
keywords = ["music-tagging", "opencc", "flac", "dsf"]
categories = ["command-line-utilities"]
description = "Simple tool for edit music tag in command line. Also it could convert Traditional Chinese(TW) to Simple Chinese(SC)."
license = "GPL-3"
build = "build.rs"
include = ["src/**/*", "Cargo.toml", "README*.md", "LICENSE"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[build-dependencies]
cfgrammar = "0.13.5"
lrlex = "0.13.5"
lrpar = "0.13.5"

[dependencies]
audiotags = "0.5.0"
taglib = { path = "../taglib-rust", features = ["use-pkgconfig"] }

anyhow = "1"
as-dyn-trait = "0.2.0"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
flexi_logger = { version = "0.28", default_features = false }
homedir = "0.2.1"
itertools = "0.12.1"
log = "0.4"
lazy_static = "1.4.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
strum = "0.26"
strum_macros = "0.26"
toml = "0.8.12"
walkdir = "2.5.0"

encoding_rs = "0.8.34"
encoding = "0.2.33"
fancy-regex = "0.13"
opencc-rust = { version = "1.1", features = ["static-dictionaries"] }
regex = { version = "1.10", default-features = false, features = ["std"] }
titlecase = "3.1.1"

cfgrammar = "0.13.5"
lrlex = "0.13.5"
lrpar = "0.13.5"
wildmatch = "2.3.4"
